tests/invalid/depth17.h
#include "depth18.h"
